--- a/gb/2/2/26/n172813.md
+++ b/gb/2/2/26/n172813.md
@@ -4,13 +4,14 @@
 <tr><td VALIGN=TOP width="626"><h2 align=center>中国青年报：公安民警正在充当黑恶势力的保护伞</h2>
 <h6></h6>
 <hr>
-	<p><span style="color: #ffffff;">(http://www.epochtimes.com)</span><br />
+	<p><span style="color: #ffffff">(https://www.epochtimes.com)</span></p>
+<p>
 【大纪元2月26日讯】中国青年报2月25日刊登记者吴湘韩文章称,中国内地相当大比例的公安民警正在充当着黑恶势力的保护伞。</p>
 <p>湖南省邵东县廉桥镇素有“南国药都”之称。由于经营药材利润可观，当地一部分不法之徒不惜血本，纠集一帮喽口罗，强行抢占市场，垄断药材行业。1996年，以杨峰解和陈伟强为首的两股黑帮势力在当地逐渐“壮大”，为了互相争夺地盘，他们拉拢人马，制刀买枪，大打出手。</p>
 <p>据了解，从1996年初至2001年11月，廉桥黑帮共发生持械火拼16起，犯下命案6起，打伤20余人次，持枪抢劫4起，涉案黑帮成员35人，非法私藏枪支数十支，子弹300余发，军用手榴弹2枚。</p>
 <p>令人震惊的是，这两股黑帮势力都在县公安局找到了“保护伞”。原邵东县公安局副局长张必能与原邵东县公安局刑侦大队副大队长龙朝阳在执法过程中，各自扶持一股黑恶势力，进行明争暗斗。</p>
 <p>去年11月下旬，张必能与龙朝阳被依法逮捕。</p>
-<p>在湖南已经查处的涉黑涉恶大案中，大都有公安民警充当“后台”、“保护伞”。以涟源市农村信用联社副主任谭和平为首的带黑社会性质犯罪组织一案，涟源市公安局就有一副政委及巡警大队长、税侦大队长身涉其中﹔邵阳市成功摧毁的以荡宁、荡宏两兄弟为首的黑社会性质组织，就有原绥宁县公安局两任局长、一副局长、原城关派出所教导员涉案﹔在郴州市一起政法干部涉黑<ahref="/news/epochnews/home/_f315.md#1">腐败</a>案中，除郴州市政法委原副书记、资兴市政法委原书记、资兴市检察院原副检察长外，还有资兴市公安局一副局长，他们包庇、纵容袁学明黑社会性质犯罪团伙，为其充当保护伞﹔永州市公安局一举铲除的以蒋齐心为首的黑恶势力犯罪团伙，就有东安县公安局副局长兼交警大队长夏再生为其充当“保护伞”，把交警专用车，连同车辆具有的行政职权一并拱手让给了蒋氏集团。</p>
+<p>在湖南已经查处的涉黑涉恶大案中，大都有公安民警充当“后台”、“保护伞”。以涟源市农村信用联社副主任谭和平为首的带黑社会性质犯罪组织一案，涟源市公安局就有一副政委及巡警大队长、税侦大队长身涉其中﹔邵阳市成功摧毁的以荡宁、荡宏两兄弟为首的黑社会性质组织，就有原绥宁县公安局两任局长、一副局长、原城关派出所教导员涉案﹔在郴州市一起政法干部涉黑腐败案中，除郴州市政法委原副书记、资兴市政法委原书记、资兴市检察院原副检察长外，还有资兴市公安局一副局长，他们包庇、纵容袁学明黑社会性质犯罪团伙，为其充当保护伞﹔永州市公安局一举铲除的以蒋齐心为首的黑恶势力犯罪团伙，就有东安县公安局副局长兼交警大队长夏再生为其充当“保护伞”，把交警专用车，连同车辆具有的行政职权一并拱手让给了蒋氏集团。</p>
 <p>据统计，在湖南已经查处的涉黑涉恶大案中，充当后台、“保护伞”的56人，涉及党政、人大、政协、公、检、法、工商、税务、交通等国家机关工作人员，其中公安民警32人，占了57.1％。湖南省公安厅一负责人称：“这极大地损害了公安队伍的整体形象。”</p>
 <p>就全国来说，从公幵报道的扫黑除恶典型案例来看，公安民警充当黑恶势力“保护伞”也占有相当大的比例。被依法判处死刑的“黑帮老大”钟文星原是广东省普宁市森林公安分局的民警﹔河南省汝州市公安局主管刑侦的副局长韩天江包庇、放纵唐利峰黑社会性质组织作恶，并在公安机关决定抓捕唐利峰等人时为唐通风报信﹔备受关注的广西壮族自治区百色市黑社会性质团伙“保护伞”的系列案中，原两任公安局长农家益和李红专、原副局长林树春、黄政贤、原政委马斯克长期为黑社会性质组织幵赌场和色情场所提供庇护，百色地区公安局治安支队原支队长韦建勇、百色市公安局原治安大队长梁成新也涉案其中﹔广西柳州市原公安局长于丁充当黑社会保护伞被判死刑﹔广西合山市公安局原副局长黄瑞飞被个体煤矿老板凌贵科用金钱收买，成为该组织的“保护伞”﹔四川自贡市公安机关摧毁了以曾少林、罗筱泉为首的、成员达50余人的黑社会性质犯罪组织，涉嫌为该黑社会组织充当“保护伞”的原县公安局刑警大队大队长陈兴良、副大队长唐汝仲，代寺派出所副所长罗明全等5人同时落入法网﹔长春黑老大梁旭东在短短几年内，对一批国家公职人员进行高密度的糖衣炮弹攻击，在自己的关系网上布下一个个红点，其中有10名警察﹔浙江温岭张畏黑社会性质组织就用金钱控制了一批当地官员，其中包括前温岭市公安局局长杨卫中，他们对张畏的关怀无微不至，张畏在温岭的别墅围墙上甚至有一块写着“温岭市公安局重点保护单位”的牌子﹔为黑社会团伙提供保护的陕西省富平县公安局局长丁叔亮、副局长陈文忠、惠夏志、杨耀等6名公安败类被依法逮捕﹔公安部原副部长、全国打击走私领导小组原副组长李纪周因庇护“远华”走私被查处﹔等等。</p>
 <p>一份资料显示，全国为黑恶势力充当“保护伞”的公安民警有225人，其中县级以上公安机关领导干部48人。这相对于全国100多万民警来说无疑是个别现象，但披露的事实触目惊心，造成的危害也很大。</p>
@@ -18,57 +19,57 @@
 <p>入口把关不严也是公安队伍的整体素质不理想、个别问题比较突出的原因之一。湖南省公安厅新上任的周本顺厅长坦言：“过去公安部门进人比较乱。”</p>
 <p>据了解，前几年在湖南一些地方，出现这样一种怪现象：正规公安院校的毕业生进不了公安机关，至今仍在上访，相反一些没有受过正规公安院校教育的地方领导的子女、公安子弟却穿上了警服。</p>
 <p>此外，公安民警在日常工作中，和黑恶势力打交道多，所谓近墨者黑，被染黑的可能性增大。</p>
-<p><span style="color: #ffffff;">(http://www.dajiyuan.com)</span></p>
-<hr />
-<p><span style="color: red;"><b>相关文章</b></span></p>
+<p><span style="color: #ffffff">(https://www.dajiyuan.com)</span></p>
+<p><span style="color: red"><b>相关文章</b></span></p>
 <ul>
-<li><ahref="/news/epochnews/big5/2002/2/26/172791.md#1" target="_blank" rel="noopener noreferrer">中共称将放宽大陆居民户口迁移限制</a> (2/26/2002)</li>
-<li><ahref="/news/epochnews/big5/2002/2/25/172770.md#1" target="_blank" rel="noopener noreferrer">他为情人去行贿 铁哥们儿捧倒广西公安厅副厅长</a> (2/25/2002)</li>
-<li><ahref="/news/epochnews/big5/2002/2/24/172500.md#1" target="_blank" rel="noopener noreferrer">华尔街日报：北京思想控制欲加诸于美国人</a> (2/24/2002)</li>
-<li><ahref="/news/epochnews/big5/2002/2/23/172404.md#1" target="_blank" rel="noopener noreferrer">浙江义乌前公安局局长收贿赂案开庭审理</a> (2/23/2002)</li>
-<li><ahref="/news/epochnews/big5/2002/2/23/172390.md#1" target="_blank" rel="noopener noreferrer">北京260人玩烟花毁容</a> (2/23/2002)</li>
-<li><ahref="/news/epochnews/big5/2002/2/23/172206.md#1" target="_blank" rel="noopener noreferrer">张清溪：布什?中国?法轮功</a> (2/23/2002)</li>
-<li><ahref="/news/epochnews/big5/2002/2/23/172299.md#1" target="_blank" rel="noopener noreferrer">布什访华期间 北京拘留四十七名基督徒</a> (2/23/2002)</li>
-<li><ahref="/news/epochnews/big5/2002/2/23/172240.md#1" target="_blank" rel="noopener noreferrer">北京抓获三名“扎针”嫌犯 传染艾滋病</a> (2/23/2002)</li>
-<li><ahref="/news/epochnews/big5/2002/2/22/172064.md#1" target="_blank" rel="noopener noreferrer">迎布什天安门广场如临大敌 1.8万警力戒备</a> (2/22/2002)</li>
-<li><ahref="/news/epochnews/big5/2002/2/22/172001.md#1" target="_blank" rel="noopener noreferrer">被中国囚禁人士希望早日获释</a> (2/22/2002)</li>
-<li><ahref="/news/epochnews/big5/2002/2/21/171938.md#1" target="_blank" rel="noopener noreferrer">北京当局已动用1.8万警力戒备天安门</a> (2/21/2002)</li>
-<li><ahref="/news/epochnews/big5/2002/2/19/171406.md#1" target="_blank" rel="noopener noreferrer">大陆各省驻京办事处已成关押法轮功学员监狱</a> (2/20/2002)</li>
-<li><ahref="/news/epochnews/big5/2002/2/19/171497.md#1" target="_blank" rel="noopener noreferrer">长春警察打砸抢土匪行径:疯狂抢劫财物 险逼死人命</a> (2/19/2002)</li>
-<li><ahref="/news/epochnews/big5/2002/2/19/171495.md#1" target="_blank" rel="noopener noreferrer">因爱生怨一屋惊现两尸 公安局长家中惊爆杀人案</a> (2/19/2002)</li>
-<li><ahref="/news/epochnews/big5/2002/2/19/171478.md#1" target="_blank" rel="noopener noreferrer">台留学生法轮功示威被捕获释李政原已返美台湾学员勿冒险前往大陆</a> (2/19/2002)</li>
-<li><ahref="/news/epochnews/big5/2002/2/17/171116.md#1" target="_blank" rel="noopener noreferrer">被扣留3瑞典籍法轮功学员明日离境</a> (2/17/2002)</li>
-<li><ahref="/news/epochnews/big5/2002/2/17/171022.md#1" target="_blank" rel="noopener noreferrer">李鹏访澳 澳警滥用武力殴无线记者</a> (2/17/2002)</li>
-<li><ahref="/news/epochnews/big5/2002/2/17/170961.md#1" target="_blank" rel="noopener noreferrer">BBC:53名外籍法轮功支持者被中国逐出境</a> (2/17/2002)</li>
+<li><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/2/2/26/n172791.md#1" target="_blank" rel="noopener noreferrer nofollow">中共称将放宽大陆居民户口迁移限制</a> (2/26/2002)</li>
+<li><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/2/2/25/n172770.md#1" target="_blank" rel="noopener noreferrer nofollow">他为情人去行贿 铁哥们儿捧倒广西公安厅副厅长</a> (2/25/2002)</li>
+<li><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/2/2/24/n172500.md#1" target="_blank" rel="noopener noreferrer nofollow">华尔街日报：北京思想控制欲加诸于美国人</a> (2/24/2002)</li>
+<li><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/2/2/23/n172404.md#1" target="_blank" rel="noopener noreferrer nofollow">浙江义乌前公安局局长收贿赂案开庭审理</a> (2/23/2002)</li>
+<li><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/2/2/23/n172390.md#1" target="_blank" rel="noopener noreferrer nofollow">北京260人玩烟花毁容</a> (2/23/2002)</li>
+<li><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/2/2/23/n172206.md#1" target="_blank" rel="noopener noreferrer nofollow">张清溪：布什?中国?法轮功</a> (2/23/2002)</li>
+<li><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/2/2/23/n172299.md#1" target="_blank" rel="noopener noreferrer nofollow">布什访华期间 北京拘留四十七名基督徒</a> (2/23/2002)</li>
+<li><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/2/2/23/n172240.md#1" target="_blank" rel="noopener noreferrer nofollow">北京抓获三名“扎针”嫌犯 传染艾滋病</a> (2/23/2002)</li>
+<li><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/2/2/22/n172064.md#1" target="_blank" rel="noopener noreferrer nofollow">迎布什天安门广场如临大敌 1.8万警力戒备</a> (2/22/2002)</li>
+<li><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/2/2/22/n172001.md#1" target="_blank" rel="noopener noreferrer nofollow">被中国囚禁人士希望早日获释</a> (2/22/2002)</li>
+<li><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/2/2/21/n171938.md#1" target="_blank" rel="noopener noreferrer nofollow">北京当局已动用1.8万警力戒备天安门</a> (2/21/2002)</li>
+<li><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/2/2/19/n171406.md#1" target="_blank" rel="noopener noreferrer nofollow">大陆各省驻京办事处已成关押法轮功学员监狱</a> (2/20/2002)</li>
+<li><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/2/2/19/n171497.md#1" target="_blank" rel="noopener noreferrer nofollow">长春警察打砸抢土匪行径:疯狂抢劫财物 险逼死人命</a> (2/19/2002)</li>
+<li><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/2/2/19/n171495.md#1" target="_blank" rel="noopener noreferrer nofollow">因爱生怨一屋惊现两尸 公安局长家中惊爆杀人案</a> (2/19/2002)</li>
+<li><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/2/2/19/n171478.md#1" target="_blank" rel="noopener noreferrer nofollow">台留学生法轮功示威被捕获释李政原已返美台湾学员勿冒险前往大陆</a> (2/19/2002)</li>
+<li><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/2/2/17/n171116.md#1" target="_blank" rel="noopener noreferrer nofollow">被扣留3瑞典籍法轮功学员明日离境</a> (2/17/2002)</li>
+<li><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/2/2/17/n171022.md#1" target="_blank" rel="noopener noreferrer nofollow">李鹏访澳 澳警滥用武力殴无线记者</a> (2/17/2002)</li>
+<li><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/2/2/17/n170961.md#1" target="_blank" rel="noopener noreferrer nofollow">BBC:53名外籍法轮功支持者被中国逐出境</a> (2/17/2002)</li>
 </ul>
-<p>&nbsp;</p>
+?</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/2/2/17/n170961.md#1">BBC:53名外籍法轮功支持者被中国逐出境</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/2/2/17/n171022.md#1">李鹏访澳  澳警滥用武力殴无线记者</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/2/2/17/n171116.md#1">被扣留3瑞典籍法轮功学员明日离境</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/2/2/19/n171406.md#1">大陆各省驻京办事处已成关押法轮功学员监狱</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651258.md#1">大华府急难救助协会举办防诈讲座　提升侨胞识诈能力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14646219.md#1">2026年侨务委员会海外青年语文研习班开放报名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14637130.md#1">2025大华府地区华语文推广重点聚落研讨会 隆重登场 圆满举行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14637123.md#1">华府民俗文化种子教师研习3D果冻艺术创作</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/7/n10698182.md#1" target="_blank">共产暴政录：中共在苏区杀人如麻</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/24/n10998917.md#1" target="_blank">影片：与全世界背道而行 中共为何打击善良</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/3/n10686541.md#1" target="_blank">古玉文：名流上书中共的伤痕往事</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/2/n11157870.md#1" target="_blank">中共强摘器官 芬兰议会九议员吁惩罚罪犯</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14615939.md#1">执子之手 与子偕老 一个真实的爱情故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616068.md#1">台湾故宫博物院百年院庆 推出宋版图书特展</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615054.md#1">哈德逊河画派：艺术与人生的知音</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/9/n14612893.md#1">扰乱中孕育灵感：珍?奥斯汀的写作生活</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14616630.md#1">【未解之谜】藏地奇迹 揭开生命的真相</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/21/n14620977.md#1">【直播】美国副总统万斯在以色列举行记者会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14620321.md#1">【重播】亚特兰大警方：持枪男子机场发威胁被捕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/21/n14620457.md#1">【时政春秋】中共忌惮独立运动 盛雪谈满洲复国（下集）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/18/n14619148.md#1">舒淇主演新片《寻她》 大陆上映3小时即撤档</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/12/n14614582.md#1">8个关键信号显示你正迈向富裕退休生活</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/19/n14619256.md#1">海外热传秦刚现身北京音乐节 或安全退休？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/18/n14619161.md#1">李亚鹏回应与海哈金喜离婚质疑 称真相更残忍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/19/n14619177.md#1">何炅自曝出现衰老焦虑 状态大不如从前</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14620317.md#1">汤唯睽违7年再拍剧 网传新剧与易烊千玺搭档</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14620277.md#1">刘嘉玲曝节目秘辛：梁朝伟让我少说话</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14619895.md#1">盆栽植物的叶子变黄怎么救？专家教你方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14619709.md#1">7个容易被忽略的脑瘤征兆 看看你有没有</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14620190.md#1">【美食天堂】虾馄饨汤～只需30分钟！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/17/n14618289.md#1">南瓜巧克力马芬 秋季甜点 享受丰收季节的美味</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/21/n14620519.md#1">飞机商务舱和头等舱有何差异？值得搭乘吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/2/2/26/n172813.htm">中国青年报：公安民警正在充当黑恶势力的保护伞</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/2/2/26/n172813.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
