--- a/gb/25/6/28/n14540673.md
+++ b/gb/25/6/28/n14540673.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>五律：当前</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/06/id14540844-shutterstock_1851396139-600x400.jpg" />
-<h6>苍岳惊天色，赤云临劫尘。 (Shutterstock)
-</h6>
+<h6>苍岳惊天色，赤云临劫尘。 (Shutterstock)</h6>
 <hr>
 <p style="text-align: center;">香梦几多觉，晓钟声逼人。</p>
 <p style="text-align: center;">始终皆有数，兴废岂无因。</p>
@@ -13,38 +12,33 @@
 <p style="text-align: center;">2025年6月28日</p>
 <p style="text-align: center;">责任编辑：林芳宇@</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/18/n14293771.md#1">七月廿日（骈赋）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/22/n14315824.md#1">何极何穷（骈赋）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/6/n14325630.md#1">神州登临（骈赋）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/18/n14333677.md#1">临末始新（骈赋）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/12/n14349425.md#1">归去来兮（骈赋）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418838.md#1">诗：中土的泪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14422016.md#1">绝句</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/3/10/n14454917.md#1">绝句（九）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/16/n14510644.md#1">五律：此情</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538429.md#1">五律：应时</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/14/n11257164.md#1" target="_blank">【征文】凌晓辉：贞洁论（四）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/6/n4003814.md#1" target="_blank">信师信法　一路前行（下）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/28/n11415356.md#1" target="_blank">共产暴政录：岳父全家被杀 盛世才本人善终</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/21/n11400032.md#1" target="_blank">澳立法会议员：公开直接制止中共迫害法轮功</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/28/n14519658.md#1">大唐翰墨端严遒美 笔走龙蛇奔放飘逸（下）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/7/n14526567.md#1">汉文帝受小官当众羞辱竟升他的官 到底怎回事？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531481.md#1">辛劳十余年 老仆扶养辞世主子三女长大 未曾一睹芳容</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533725.md#1">李渊宠妃搅弄风云 李世民无端遭诬陷 忍辱不争</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/24/n14537972.md#1">旅美台湾画家张家玮的岛屿之梦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540286.md#1">【直播】川普会见刚果和卢旺达外交部长</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540235.md#1">【纪元焦点】北京传“秋天有变” 习气数尽了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540264.md#1">【直播】华府智库：中共重启伊朗威胁的可能性</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539554.md#1">陆剧《长安的荔枝》突撤档 那尔那茜遭封杀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539733.md#1">火星表面惊现巨型“蜘蛛网” 古代水道证据？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539550.md#1">中共被爆秘密派兵赴俄 专家揭中俄背后算计</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539257.md#1">《捍卫战士3》可能是最终章 独行侠面临生存危机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539072.md#1">《F1电影》制作成本高 全球首映票房预测出炉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538823.md#1">成本过亿 小沈阳新片上映3天票房仅7.6万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539600.md#1">打破婚变传闻 吴奇隆刘诗诗一家三口罕见同框</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539794.md#1">丰田销量连三月创新高 美日中市场需求强劲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539087.md#1">专家：避免用三种痛苦的方式伤害伴侣</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539961.md#1">上厕所用再生或竹制卫生纸安全吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/22/n14536363.md#1">前海豹突击队员讲授如何持之以恒地锻炼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539089.md#1">研究：手机成瘾使青少年自杀风险增三倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/31/n10101444.md#1">腊月十六为何盛大作尾牙 祭土地公迎财还迎接什么？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/19/n4461035.md#1">美人巨眼识穷途——读《虬髯客传》之红拂女(上)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14686592.md#1">人物写实油画大赛入围作品欣赏——《深渊边缘》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/23/n4464215.md#1">闻道长安似弈棋——读《虬髯客传》之虬髯客(下)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14686851.md#1">立春节气要“养生”做这些事增长一年阳气</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689662.md#1">【唐青看时事】英加押宝中共 与虎谋皮</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689694.md#1">【重播】众院民主党领袖杰弗里斯举行记者会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689634.md#1">【直播】肯尼迪部长在SAMHSA预防日发表演讲</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688447.md#1">Costco推出Nike联名款运动鞋 转售价格飙涨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688660.md#1">金价大跳水 大陆投资者经历从赚5万到倒贴4万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688457.md#1">印度学者：张又侠落马直接影响中共21大</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688459.md#1">陆媒票选最有好感艺人 佘诗曼成唯一入榜港星</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687927.md#1">金钟国罕见公开爱妻身份 称一直把她当妹妹看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689262.md#1">知名女歌手于文文贵州演唱会上晕倒送医</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688468.md#1">李嘉明晒片酬 自曝发视频吐槽后收到剧组拖欠款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688492.md#1">港姐吴文忻乳癌复发 癌细胞扩散至一重要器官</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688718.md#1">这些行为看似无害 但会让旅馆员工恼火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685989.md#1">2026年不容错过的旅行目的地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689115.md#1">为什么小狗需要尾巴？ 有何作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688143.md#1">【车评】展现超级四驱实力 2025 Mitsubishi Outlander SEL</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687871.md#1">日式护肤九步法 层层养护润至极处</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/6/28/n14540673.htm">五律：当前</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540673.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
